<resources>
    <string name="app_name">DealX</string>
    <string name="autorization_text_1">Введите код доступа</string>
    <string name="autorization_hint_1">*****</string>
    <string name="autorization_text_2">Создайте свое Community</string>
    <string name="creating_text_1">Введите параметры Community</string>
    <string name="creating_hint_1">Количество ваших человек</string>
    <string name="creating_text_2">Создайте свое Community</string>
    <string name="creating_hint_2">Количество иерархий</string>
    <string name="autorization_text_3">Зарегистрироваться</string>
    <string name="regdial_hint_1">Придумайте пароль</string>
    <string name="regdial_hint_2">Повторите пароль</string>
    <string name="regdial_hint_3">Придумайте имя</string>
    <string name="regdial_hint_4">Введите Email</string>
    <string name="reg_button">Готово!</string>
    <string name="clue">Если вы еще не пользовались DealX, вам необходимо зарегистрироваться</string>
    <string name="enterpass">Введите код, который пришел к вам на почту</string>
    <string name="enterpass2">Ввести код</string>
    <string name="exit_button">Выйти из аккаунта</string>
    <string name="button">Кнопка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>